--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>weather</title>
 	<link rel="stylesheet" type="text/css" href="static/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="static/css/flat-ui.css">
+	<link rel="icon" type="image/x-icon" href="./static/img/favicon.png">
 </head>
 <body >
     <div id="app"></div>
