--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <script type="text/javascript" src="static/js/jquery-3.1.0.js"></script>
 <script type="text/javascript" src="static/js/bootstrap.js"></script>
-<script type="text/javascript" src="static/js/echarts-all.js"></script>
+<script type="text/javascript" src="static/js/echarts.js"></script>
+<script type="text/javascript" src="static/js/jquery-ui.js"></script>
 <!-- <script type="text/javascript" src="static/js/snowfall.jquery.min.js"></script> -->
 </body>
 </html>
