--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
 <script type="text/javascript" src="static/js/echarts-china.js"></script>
 <script type="text/javascript" src="static/js/jquery-ui.js"></script>
 <!-- <script type="text/javascript" src="static/js/snowfall.jquery.min.js"></script> -->
+<script type="text/javascript">
+	window.myObject = Object.assign(Object)
+</script>
 </body>
 </html>
