--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 	<link rel="icon" type="image/x-icon" href="./static/img/favicon.png">
 </head>
 <body >
-    <div id="app"></div>
+    <div id="app">
+    	<h5>页面加载中。。。。</h5>
+    </div>
     <!-- built files will be auto injected -->
 
-<script type="text/javascript" src="static/js/jquery-3.1.0.js"></script>
-<script type="text/javascript" src="static/js/bootstrap.js"></script>
+<!-- <script type="text/javascript" src="static/js/jquery-3.1.0.js"></script> -->
+<!-- <script type="text/javascript" src="static/js/bootstrap.js"></script> -->
 <script type="text/javascript" src="static/js/echarts.js"></script>
 <script type="text/javascript" src="static/js/echarts-china.js"></script>
-<script type="text/javascript" src="static/js/jquery-ui.js"></script>
+<!-- <script type="text/javascript" src="static/js/jquery-ui.js"></script> -->
 <!-- <script type="text/javascript" src="static/js/snowfall.jquery.min.js"></script> -->
 <script type="text/javascript">
 	window.myObject = Object.assign(Object)
