--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <!-- <script type="text/javascript" src="static/js/jquery-3.1.0.js"></script> -->
 <!-- <script type="text/javascript" src="static/js/bootstrap.js"></script> -->
-<script type="text/javascript" src="static/js/echarts.js"></script>
+<!-- <script type="text/javascript" src="static/js/echarts.js"></script> -->
+<script src="https://cdn.bootcss.com/echarts/3.4.0/echarts.min.js"></script>
 <script type="text/javascript" src="static/js/echarts-china.js"></script>
 <!-- <script type="text/javascript" src="static/js/jquery-ui.js"></script> -->
 <!-- <script type="text/javascript" src="static/js/snowfall.jquery.min.js"></script> -->
